--- a/Web/site.estudos/style/style.css
+++ b/Web/site.estudos/style/style.css
@@ -363,3 +363,66 @@ body {
     border-radius: 15px;
     height: 48px;
 }
+
+
+
+/*FORMULARIO PARA TREINAR JS  */
+.alinhamento{
+    display: flex;
+    /* height: auto; */
+    align-items: center;
+    justify-content: center;
+    background-color: #0056b3;
+    flex-flow: row wrap;
+}
+
+
+.container {
+  background-color: white;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  width: 300px;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+}
+
+input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  box-sizing: border-box;
+}
+
+.botao {
+  margin-top: 15px;
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.botao:hover {
+  background-color: #0056b3;
+}
+
+#resultado {
+  margin-top: 20px;
+  text-align: center;
+  color: green;
+}
+
+
+
+/* EVENTO TREINO */
