--- a/Web/HTML-CSS-JS/e-comercedemo/style/style.css
+++ b/Web/HTML-CSS-JS/e-comercedemo/style/style.css
@@ -1,26 +1,222 @@
-body{
-    margin: 0;
-    padding: 0;
-    background-color: #eeeeee;
-  font-family: Arial, sans-serif;
-  background: #f2f2f2;
-  padding: 20px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  font-family: Arial, sans-serif;
+  /* padding: 20px; */
+   font-family: 'Lato', sans-serif;
+}
+
+
+/* Títulos com fonte elegante */
+h1, h2, h3 {
+  font-family: 'Playfair Display', serif;
+}
+
+
+.headerLoja {
+  display: flex;
+  /* border: solid 1px red; */
+  height: 6rem;
+  flex: 1 1 90%;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: row wrap;
+  gap: 5%;
+  padding: 0;
+  margin: 0;
+  background-color: yellow;
+}
+
+.logoHeaderLoja {
+  display: flex;
+  flex: 1 1 20%;
+  /* border: solid 1px green; */
+  height: 5rem;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.logoHeaderLoja img {
+  max-width: 100%;
+  max-height: 100%;
+  /* overflow: auto; */
+}
+
+.h1headerLoja {
+  display: flex;
+  flex: 1 1 40%;
+  /* border: solid 1px orchid; */
+  height: 5rem;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.botaoCarrinho {
+  display: flex;
+  /* border: solid 1px orangered; */
+  flex: 1 1 30%;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-flow: row wrap;
+  height: 5rem;
+  gap: 5%;
+  
+
+}
+.espacoCarrinho{
+  display: flex;
+  /* border: solid 1px purple; */
+  flex: 1 1 10%;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: row wrap;
+  height: 5rem;
+
+}
+.espacoCarrinho a{
+  gap:4px;
+  padding: 5px;
+}
+
+.espacoTotal{
+  display: flex;
+  /* border: solid 1px purple; */
+  flex: 1 1 10%;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: row wrap;
+  height: 5rem;
+
+
+}
+
+.botaoCarrinho a {
+  text-align: top;
+  padding: 5px;
+  background-color: blue;
+  border-radius: 15px;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  /* suaviza o efeito */
+}
+
+
+.botaoCarrinho a:hover {
+  background-color: darkblue;
+  /* muda cor */
+  transform: scale(1.01);
+  /* aumenta levemente */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  /* sombra */
+}
+
+
 .produtos {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 15px;
+  display: flex;
+  flex:1 1 90%;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: row wrap;
+  /* border: solid 1px red; */
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
 .produto {
+  display: flex;
+  width: 300px;
+  height: 500px;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: column wrap;
   background: #fff;
-  padding: 15px;
+  padding: 2px;
   border-radius: 8px;
   text-align: center;
+  gap: 50px;
+  box-shadow: 0 0 4px;
+  border: none;
 }
 
-button {
+.produto  img{
+  align-items: flex-start;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.espacoImg{
+  display: flex;
+  width: 280px;
+  height: 190px;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  /* border: solid 1px green; */
+  margin-top:  10px;
+
+  
+}
+
+.espacoNomeProduto{
+  display: flex;
+  width: 100%;
+  height: 150px;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  /* border: solid 1px black */
+
+}
+
+.espacoBtnAdd{
+  display: flex;
+  width: 200px;
+  height: 20px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  /* border: solid 1px blue; */
+  margin-bottom:  10px;
+
+}
+.espacoBtnAdd button{
+  width: 100%;
+  padding: 15px;
+  cursor: pointer;
+  color: white;
+  background: blue;
+  border: none;
+
+}
+
+
+
+
+.botoesFinais {
+  display: flex;
+  flex-flow: wrap row;
+  gap: 0.5rem;
+}
+
+label {
+  font-size: 0.7rem;
+  color: rgb(51, 51, 51);
+  font-weight: 1rem;
+}
+
+.finalizar button {
   padding: 10px;
   border: none;
   background: #25D366;
@@ -28,6 +224,73 @@ button {
   cursor: pointer;
   border-radius: 5px;
 }
+
+.limparCarrinho button {
+  padding: 10px;
+  border: none;
+  background: red;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.tooltip {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  bottom: 120%;
+  /* acima do botão */
+  left: 50%;
+  transform: translateX(-50%);
+  background: black;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 0.8rem;
+  transition: opacity 0.3s;
+}
+
+#lixo {
+  position: relative;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+#lixo:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
+.VoltarInicio {
+  display: flex;
+  /* border: solid 1px blue; */
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: row wrap;
+  height: 2rem;
+}
+
+.VoltarInicio a {
+  padding: 10px;
+  background-color: blue;
+  border-radius: 15px;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  /* suaviza o efeito */
+}
+
+
+.VoltarInicio a:hover {
+  background-color: darkblue;
+  /* muda cor */
+  transform: scale(1.01);
+  /* aumenta levemente */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  /* sombra */
+}
+
 
 .btn-carrinho {
   display: inline-block;
@@ -42,4 +305,3 @@ button {
   margin: 10px 0;
   padding: 10px;
 }
-
